Mon Sep 14 19:26:34 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (parse_mlsx_entry): parse pathnames including
	  space correctly.

Mon Sep 14 11:12:10 2015  Anton Davydov  <antondavydov.o@gmail.com>

	* lib/racc/rdoc/grammar.en.rdoc: [DOC] fix typo, "convertion" to
	  "conversion".  [Fix GH-1016]

Sun Sep 13 11:03:13 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h: prefix RUBY or RB to global symbols to get
	  rid of name conflicts with other headers.

	* include/ruby/encoding.h, include/ruby/intern.h: ditto.

Sun Sep 13 09:38:51 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (size, modify, create, type, unique, perm, lang,
	  media_type, charset): new methods to return standard facts.

Sat Sep 12 19:43:49 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_iseq_setup_normal): do not clear local
	  variables here. vm_push_frame() clears.

	* vm_insnhelper.c (vm_call_iseq_setup_tailcall): ditto.

	* vm_insnhelper.c (vm_push_frame): move check code to
	  vm_check_frame().

	  Reorder initialization timing to reuse same values (sp).

	* compile.c (rb_iseq_compile_node): use
	  iseq_set_exception_local_table() for ISEQ_TYPE_DEFINED_GUARD.

Sat Sep 12 23:06:51 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (file?, directory?, appendable?, creatable?,
	  deletable?, enterable?, renamable?, listable?, directory_makable?,
	  purgeable?, readable?, writable?): new methods.

Sat Sep 12 21:27:22 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (FACT_PARSERS): support system dependent facts
	  UNIX.mode, UNIX.owner, UNIX.group, UNIX.ctime, and UNIX.atime.

Sat Sep 12 19:08:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_dup2): should return the new fd on
	  success, while msvcrt returns 0 wrongly.

Sat Sep 12 18:14:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (parse_mlsx_entry, mlst) raise an FTPProtoError
	  when parsing failed.
